file esterno per creazione db